# camelup

./: .gitignore  CMakeLists.txt  README.md
include/camelup/: actions.hpp  engine.hpp  game_state.hpp  types.hpp
include/camelup/rules/: legal_actions.hpp
src/: engine.cpp  main.cpp  ui_main.cpp
src/rules/: legal_actions.cpp
tests/: engine_tests.cpp
